# stellar-live-pol

./: .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: ci.yml
app/: globals.css  layout.tsx  page.tsx
components/: ActivityFeed.test.tsx  ActivityFeed.tsx  ContractCard.tsx  PollCard.tsx  TransactionStatus.tsx  WalletConnect.tsx  WalletPanel.tsx
contracts/poll/: Cargo.toml  README.md
contracts/poll/src/: lib.rs
lib/: contract.ts  format.test.ts  format.ts  stellar.ts  transaction-state.test.ts  transaction-state.ts  wallet-storage.test.ts  wallet-storage.ts  wallet.ts
